Update SQL Murder Mystery.ipynb

--- a/SQL Murder Mystery.ipynb
+++ b/SQL Murder Mystery.ipynb
@@ -133,7 +133,7 @@
    ],
    "source": [
     "# First query from the crime scene\n",
-    "'''\n",
+    "query_1 ='''\n",,
     "SELECT *\n",
     "FROM crime_scene_report\n",
     "WHERE \n",
